--- a/style.css
+++ b/style.css
@@ -168,8 +168,17 @@ p {
   width: 300px;
   height: 270px;
   border-radius: 20%;
-  /* border-radius: var(--size-border-radius); */
   border: 2px solid var(--color-light-white);
+}
+.Yonu__avartar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+.Yonu__avartar:hover {
+  background-color: var(--color-blue);
+  color: var(--color-dark-white);
 }
 
 .home__title,
