--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body {
   /* font-family: "Open Sans", sans-serif; */
   margin: 0;
 }
+canvas {
+  width: 100%;
+  height: 100%;
+}
 
 a {
   text-decoration: none;
